// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SteadyBar> renders 1`] = `
.c0 {
  position: relative;
}

.c1 {
  border-radius: 10px;
  border: 1px solid white;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <Resizable
    className="c1"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  >
    <BarIcons
      instructions={Array []}
    />
  </Resizable>
</div>
`;

exports[`<SteadyBar> renders cadence icon when interval has cadence specified 1`] = `
.c0 {
  position: relative;
}

.c1 {
  border-radius: 10px;
  border: 1px solid white;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <Resizable
    className="c1"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  >
    <BarIcons
      cadence={90}
      instructions={Array []}
    />
  </Resizable>
</div>
`;

exports[`<SteadyBar> renders with Tooltip when selected and showTooltip=true 1`] = `
.c0 {
  position: relative;
}

.c1 {
  border-radius: 10px;
  border: 1px solid white;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "zIndex": 10,
    }
  }
>
  <Tooltip
    interval={
      Object {
        "cadence": undefined,
        "id": "mock-id",
        "instructions": Array [],
        "intensity": 0.763,
        "length": Object {
          "seconds": 50,
        },
        "pace": 0,
        "type": "steady",
      }
    }
    mode={
      BikeMode {
        "ftp": 250,
        "lengthType": "time",
        "sportType": "bike",
        "weight": 75,
      }
    }
    onCadenceChange={[Function]}
  />
  <Resizable
    className="c1"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  >
    <BarIcons
      instructions={Array []}
    />
  </Resizable>
</div>
`;

exports[`<SteadyBar> renders without Tooltip when selected, but showTooltip=false 1`] = `
.c0 {
  position: relative;
}

.c1 {
  border-radius: 10px;
  border: 1px solid white;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "zIndex": 10,
    }
  }
>
  <Resizable
    className="c1"
    enable={
      Object {
        "right": true,
        "top": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={500}
    minHeight={25}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 190.75,
        "width": 16.666666666666668,
      }
    }
    style={
      Object {
        "backgroundColor": "#00C46A",
      }
    }
  >
    <BarIcons
      instructions={Array []}
    />
  </Resizable>
</div>
`;
